--- a/scss/_aboutus.scss
+++ b/scss/_aboutus.scss
@@ -4,5 +4,19 @@
     font-weight: 300;
     text-align: left;
     text-indent: 40px;
-	}
+  }
+  a{
+    text-decoration: underline;
+  }
+.rbximg{
+  text-align: center;
+  img{
+      margin: 15px 0;
+      height: 40px;
+  }
+  p{
+    text-align: center !important;
+  }
 }
+}
+
